# AxesAndTrolls

./: CMakeLists.txt  LICENSE  README.md
docs/: README.md  planned_architecture.drawio
include/: BattleSimulator.hpp  BattleWindow.hpp  Building.hpp  BuildingBuyButton.hpp  Button.hpp  BuyButton.hpp  BuyPhase.hpp  BuyWindow.hpp  CombatMovePhase.hpp  CombatPhase.hpp  CurrentTileView.hpp  DiceView.hpp  FriendlyMovePhase.hpp  Game.hpp  GameGraphicsManager.hpp  GameInfo.hpp  GameInitializer.hpp  GameStateManager.hpp  IncomePhase.hpp  InitializationPhase.hpp  Map.hpp  MapTester.hpp  MapView.hpp  Menu.hpp  Movement.hpp  MovementHandler.hpp  MovementTester.hpp  Phase.hpp  PlacementPhase.hpp  Player.hpp  PlayerTester.hpp  PlayerView.hpp  Randoms.hpp  ReinforcementPhase.hpp  ResourceLoading.hpp  ResourceStorage.hpp  RunAroundTester.hpp  SfmlTester.hpp  Territory.hpp  Tester.hpp  (+8 more)
include/utility/: Randoms.hpp
resources/: app.rc
src/: Building.cpp  Game.cpp  GameInitializer.cpp  GameStateManager.cpp  Map.cpp  Player.cpp  Tile.cpp  Unit.cpp  main.cpp
src/phases/: BuyPhase.cpp  CombatMovePhase.cpp  CombatPhase.cpp  FriendlyMovePhase.cpp  IncomePhase.cpp  InitializationPhase.cpp  Phase.cpp  PlacementPhase.cpp  ReinforcementPhase.cpp
src/utility/: BattleSimulator.cpp  MovementHandler.cpp  Randoms.cpp  ResourceLoading.cpp  ResourceStorage.cpp  Territory.cpp  UnitCombiner.cpp
src/visuals/: BattleWindow.cpp  BuildingBuyButton.cpp  Button.cpp  BuyButton.cpp  BuyWindow.cpp  CurrentTileView.cpp  DiceView.cpp  GameGraphicsManager.cpp  (+6 more)
test/: MapTester.cpp  MovementTester.cpp  PlayerTester.cpp  RunAroundTester.cpp  SfmlTester.cpp  Tester.cpp  TurnTester.cpp  VisualComponentTester.cpp
